button routes connected, models update, delete ok

--- a/frontend/src/components/SearchResults/SearchResults.css
+++ b/frontend/src/components/SearchResults/SearchResults.css
@@ -34,6 +34,11 @@
   margin-bottom: 20px;
 }
 
+.no-results {
+  color: grey;
+  margin: 20px;
+}
+
 @media(max-width: 800px) {
   .card {
     width: 100%;
