--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,6 +56,7 @@ form {
 
 form input,
 form textarea {
+  font-family: Arial, Helvetica, sans-serif;
   margin-bottom: 10px;
   border: solid 1px #d8d8d8;
   border-radius: 5px;
